# directfb

./: autogen.sh  configure  configure.in  directfb.spec
include/: directfb_version.h
src/core/: system.h
systems/: Makefile.am
systems/gdkpixbuf/: PB.c  pb.c  pb.h  primary.c  primary.h
systems/pb/: Makefile.am  PB.c  pb.c  pb.h  pb_surface_pool-gdkpixbuf.c  pb_surface_pool.c  primary.c  primary.h  primary_mem.c  primary_mem.h
systems/pbp/: Makefile.am  Makefile.dfb  Makefile.in  Makefile.plugin  PGContext.h  PGContextIface-hacked.h  PGShared.h  dfbadapter.cpp  dfbadapter.h  dfbgdkcontainer.c  event.h  npfunctions.h  nppalmdefs.h  pb_surface_pool.c  pbp.c  pbp.h  pbpinput.c  primary.c  primary_mem.c  primary_mem.h
